# sick-finance

./: Makefile
back/: .gitignore  Makefile
back/requirements/: requirements-local.txt  requirements.txt
back/src/: dummy_repository.py  main.py
back/src/adapter/: extract_articles.py  generated_article_repository.py  restack_controller.py  source_article_repository.py  source_repository.py
back/src/models/: articles.py  restack_task.py  source.py
backend/: .env  docker-compose.yml  pyproject.toml
front/: bun.lockb  package-lock.json  package.json
front/src/app/: page.tsx
front/src/app/[title]/: page.tsx
front/src/components/: articlecard.tsx  datatable.tsx  dummycard.tsx  dummyform.tsx
front/src/components/ui/: badge.tsx  dropdown-menu.tsx
front/src/lib/api/: articleGateway.ts  dummyGateway.ts
front/src/types/: source.ts
frontend/: .env  README.md  main.py  pyproject.toml
restack-app/: .env.Example  schedule_workflow.py
restack-app/src/: services.py
restack-app/src/agents/: agent_todo.py
restack-app/src/functions/: generate_image.py  llm.py
restack-app/src/workflows/: multistep.py
